# Loominstein

./: .gitignore  CMakeLists.txt  asciichis.cpp  main.cpp  mathchis.cpp  mathchis.h
lib/asciichis/: CMakeLists.txt  asciichis.cpp  asciichis.h
lib/mathchis/: CMakeLists.txt
lib/texturechis/: CMakeLists.txt  texture.cpp  texture.h
maps/: map01  map01.txt
textures/: texture.cpp  texture.h
